@@ -1,10 +1,11 @@
 ## HEAD:
 
-* Addign catalog which will contain all heirloom regions & bases.
+* Adding catalog which will contain all heirloom regions & bases.
 * CLI will lookup base & region from catalog.
 * Removing base requirement for all subcmds outside download & setup.
 * Added teardown command to delete domains & buckets.
 * Enclosing simpledb domains in `s
+* Added catalog subcommand to list available Heirlooms from catalog.
 
 ### v0.6.1:
 
